--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,7 @@ jobs:
         # Artifact name
         name: deployable
         # A file, directory or wildcard pattern that describes what to upload
-        path: slm_colors/target/*.jar
+        path: target/*.jar
         # The desired behavior if no files are found using the provided path.
 
 
